# language-practice

./: LICENSE  README.md
cpp/my-app/: CMakeLists.txt  REAME.md  main.cpp
java/: .gitignore
java/my-app/: README.md  pom.xml
java/my-app/src/main/java/com/mycompany/app/: App.java
java/my-app/src/main/java/com/mycompany/app/controller/: CustomerController.java  CustomerManager.java  MainController.java  UserController.java
java/my-app/src/main/java/com/mycompany/app/model/: CustomerDAO.java  CustomerDataAccessObject.java  CustomerDataAccessor.java  CustomerModel.java  UserModel.java
java/my-app/src/main/java/com/mycompany/app/view/: CustomerDisplay.java  CustomerView.java  EventDisplay.java  EventView.java  UserView.java
java/my-app/src/test/java/com/mycompany/app/: TestData.java
java/my-app/src/test/java/com/mycompany/app/controller/: CustomerControllerTest.java  MainControllerTest.java
java/my-app/src/test/java/com/mycompany/app/model/: CustomerDataAccessObjectTest.java
java/my-app/src/test/java/com/mycompany/app/view/: CustomerViewTest.java  EventViewTest.java
python/: server.py
python/simple-rest-server/: server.py
